--- a/phonebook-docker-swarm-cfn-template.yml
+++ b/phonebook-docker-swarm-cfn-template.yml
@@ -3,9 +3,8 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: >
   This Cloudformation Template deploys Phonebook Application to five Docker Machines on EC2 Instances which are ready for Docker Swarm operations. Docker Machines will run on Amazon Linux 2 with custom security group allowing SSH (22), HTTP (80) UDP (4789, 7946), and TCP(2377, 7946, 8080) connections from anywhere.
   User needs to select appropriate key name when launching the template.
-
 Parameters:
-  KeyPairName: #Will be used in Jenkins too!!!
+  KeyPairName:
     Description: Enter the name of your Key Pair for SSH connections.
     Type: AWS::EC2::KeyPair::KeyName
     ConstraintDescription: Must one of the existing EC2 KeyPair
@@ -22,7 +21,7 @@ Resources:
               - ec2-instance-connect:SendSSHPublicKey
             Resource:
               - !Sub arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:instance/*
-            Condition: {"StringEquals": {"aws:ResourceTag/project":"205"}}
+            Condition: { "StringEquals": { "aws:ResourceTag/project": "205" } }
           - Effect: Allow
             Action:
               - ec2:DescribeInstances
@@ -36,9 +35,9 @@ Resources:
           - Effect: Allow
             Principal:
               Service:
-              - ec2.amazonaws.com
+                - ec2.amazonaws.com
             Action:
-              - 'sts:AssumeRole'
+              - "sts:AssumeRole"
       ManagedPolicyArns:
         - !Ref InstanceConnectPolicy
         - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
@@ -80,7 +79,6 @@ Resources:
           FromPort: 8080
           ToPort: 8080
           CidrIp: 0.0.0.0/0
-
   ManagerLT:
     Type: "AWS::EC2::LaunchTemplate"
     Properties:
@@ -88,13 +86,12 @@ Resources:
         ImageId: ami-0ab4d1e9cf9a1215a
         InstanceType: t2.micro
         KeyName: !Ref KeyPairName
-        IamInstanceProfile: 
+        IamInstanceProfile:
           Arn: !GetAtt EC2ConnectProfile.Arn
         SecurityGroupIds:
           - !GetAtt DockerMachinesSecurityGroup.GroupId
         UserData:
-          Fn::Base64: 
-            !Sub |
+          Fn::Base64: !Sub |
             #! /bin/bash
             yum update -y
             amazon-linux-extras install docker -y
@@ -109,7 +106,7 @@ Resources:
             yum install python-pip -y
             pip install ec2instanceconnectcli
             eval "$(mssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no  \
-            --region ${AWS::Region} ${DockerManager1} docker swarm join-token manager | grep -i 'docker')"
+              --region ${AWS::Region} ${DockerManager1} docker swarm join-token manager | grep -i 'docker')"
             # uninstall aws cli version 1
             rm -rf /bin/aws
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -126,13 +123,12 @@ Resources:
         ImageId: ami-0ab4d1e9cf9a1215a
         InstanceType: t2.micro
         KeyName: !Ref KeyPairName
-        IamInstanceProfile: 
+        IamInstanceProfile:
           Arn: !GetAtt EC2ConnectProfile.Arn
         SecurityGroupIds:
           - !GetAtt DockerMachinesSecurityGroup.GroupId
         UserData:
-          Fn::Base64: 
-            !Sub |
+          Fn::Base64: !Sub |
             #! /bin/bash
             yum update -y
             amazon-linux-extras install docker -y
@@ -147,7 +143,7 @@ Resources:
             yum install python-pip -y
             pip install ec2instanceconnectcli
             eval "$(mssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no  \
-            --region ${AWS::Region} ${DockerManager1} docker swarm join-token worker | grep -i 'docker')"
+              --region ${AWS::Region} ${DockerManager1} docker swarm join-token worker | grep -i 'docker')"
             # uninstall aws cli version 1
             rm -rf /bin/aws
             curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -157,7 +153,6 @@ Resources:
             mkdir -p /home/ec2-user/.docker
             cd /home/ec2-user/.docker
             echo '{"credsStore": "ecr-login"}' > config.json
-
   DockerManager1:
     Type: AWS::EC2::Instance
     Properties:
@@ -167,14 +162,14 @@ Resources:
       IamInstanceProfile: !Ref EC2ConnectProfile
       SecurityGroupIds:
         - !GetAtt DockerMachinesSecurityGroup.GroupId
-      Tags:                
+      Tags:
         - Key: Name
-          Value: !Sub Docker Manager 1st of ${AWS::StackName}                      
+          Value: !Sub Docker Manager 1st of ${AWS::StackName}
         - Key: server
           Value: docker-grand-master
         - Key: project
           Value: "205"
-      UserData: 
+      UserData:
         Fn::Base64: |
           #! /bin/bash
           yum update -y
@@ -194,7 +189,7 @@ Resources:
             --constraint=node.role==manager \
             --mount=type=bind,src=/var/run/docker.sock,dst=/var/run/docker.sock \
             dockersamples/visualizer
-                    # uninstall aws cli version 1
+          # uninstall aws cli version 1
           rm -rf /bin/aws
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
@@ -203,7 +198,6 @@ Resources:
           mkdir -p /home/ec2-user/.docker
           cd /home/ec2-user/.docker
           echo '{"credsStore": "ecr-login"}' > config.json
-
   DockerManager2:
     Type: AWS::EC2::Instance
     DependsOn:
@@ -211,15 +205,14 @@ Resources:
     Properties:
       LaunchTemplate:
         LaunchTemplateId: !Ref ManagerLT
-        Version: !GetAtt ManagerLT.LatestVersionNumber 
-      Tags:                
+        Version: !GetAtt ManagerLT.LatestVersionNumber
+      Tags:
         - Key: server
-          Value: docker-manager-2                       
+          Value: docker-manager-2
         - Key: Name
           Value: !Sub Docker Manager 2nd of ${AWS::StackName}
         - Key: project
           Value: "205"
-
   DockerManager3:
     Type: AWS::EC2::Instance
     DependsOn:
@@ -228,14 +221,13 @@ Resources:
       LaunchTemplate:
         LaunchTemplateId: !Ref ManagerLT
         Version: !GetAtt ManagerLT.LatestVersionNumber
-      Tags:                
+      Tags:
         - Key: server
-          Value: docker-manager-3                        
+          Value: docker-manager-3
         - Key: Name
           Value: !Sub Docker Manager 3rd of ${AWS::StackName}
         - Key: project
           Value: "205"
-
   DockerWorker1:
     Type: AWS::EC2::Instance
     DependsOn:
@@ -244,14 +236,13 @@ Resources:
       LaunchTemplate:
         LaunchTemplateId: !Ref WorkerLT
         Version: !GetAtt WorkerLT.LatestVersionNumber
-      Tags:                
+      Tags:
         - Key: server
-          Value: docker-worker-1                       
+          Value: docker-worker-1
         - Key: Name
           Value: !Sub Docker Worker 1st of ${AWS::StackName}
         - Key: project
           Value: "205"
-
   DockerWorker2:
     Type: AWS::EC2::Instance
     DependsOn:
@@ -259,43 +250,42 @@ Resources:
     Properties:
       LaunchTemplate:
         LaunchTemplateId: !Ref WorkerLT
-        Version: !GetAtt WorkerLT.LatestVersionNumber 
-      Tags:                
+        Version: !GetAtt WorkerLT.LatestVersionNumber
+      Tags:
         - Key: server
-          Value: docker-worker-2                       
+          Value: docker-worker-2
         - Key: Name
           Value: !Sub Docker Worker 2nd of ${AWS::StackName}
         - Key: project
-          Value: "205" 
-
+          Value: "205"
 Outputs:
   1stDockerManagerDashboard:
     Description: Dashboard for Docker Swarm
-    Value: !Sub 
+    Value: !Sub
       - http://${PublicAddress}:8080
       - PublicAddress: !GetAtt DockerManager1.PublicDnsName
   1stDockerManagerDNSName:
     Description: Docker Manager 1st DNS Name
-    Value: !Sub 
+    Value: !Sub
       - ${PublicAddress}
       - PublicAddress: !GetAtt DockerManager1.PublicDnsName
   2ndDockerManagerDNSName:
     Description: Docker Manager 2nd DNS Name
-    Value: !Sub 
+    Value: !Sub
       - ${PublicAddress}
       - PublicAddress: !GetAtt DockerManager2.PublicDnsName
   3rdDockerManagerDNSName:
     Description: Docker Manager 3rd DNS Name
-    Value: !Sub 
+    Value: !Sub
       - ${PublicAddress}
       - PublicAddress: !GetAtt DockerManager3.PublicDnsName
   1stDockerWorkerDNSName:
     Description: Docker Worker 1st DNS Name
-    Value: !Sub 
+    Value: !Sub
       - ${PublicAddress}
       - PublicAddress: !GetAtt DockerWorker1.PublicDnsName
   2ndDockerWorkerDNSName:
     Description: Docker Worker 2nd DNS Name
-    Value: !Sub 
+    Value: !Sub
       - ${PublicAddress}
       - PublicAddress: !GetAtt DockerWorker2.PublicDnsName
